--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,41 @@
-<div class="container mt-4">
- <h1>สถานที่ท่องเที่ยวในจังหวัดสุพรรณบุรี</h1>
- <div class="card" style="width: 18rem;">
-    <img src="assets/pin/asd01.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="container mt-5">
+    <h1 class="text-center">สถานที่ท่องเที่ยวในจังหวัดสุพรรณบุรี</h1>
+    <div class="row mt-5 text-center">
+        <div class="col-md-4 mb-5">
+            <div class="card mx-auto" style="width: 25rem;">
+                <a href="#">
+                    <img src="assets/TP/TP01.jpg" class="card-img-top" alt="...">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">หมู่บ้านมังกรสวรรค์</h5>
+                    <p class="card-text">พิพิธภัณฑ์ลูกหลานพันธุ์มังกรในจังหวัดสุพรรณบุรี ก่อตั้งโดยนายบรรหาร ศิลปอาชา ตั้งอยู่ในบริเวณศาลเจ้าพ่อหลักเมือง ฝั่งตะวันตกของแม่น้ำสุพรรณบุรี ก่อตั้งขึ้นใน พ.ศ. 2539 เพื่อเป็นอนุสรณ์ความสัมพันธ์ทางการทูตไทย-จีนครบ 20 ปี และนำเสนอเรื่องราวชาวจีนในประเทศไทย</p>
+                    <a href="#" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-5"> 
+            <div class="card mx-auto" style="width: 25rem;">
+                <a href="#">
+                    <img src="assets/TP/TP02.jpg" class="card-img-top" alt="...">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">ศูนย์เรียนรู้วิถีชีวิตและจิตวิญญาณชาวนาไทย</h5>
+                    <p class="card-text">นาเฮียใช้ หรือศูนย์เรียนรู้วิถีชีวิตและจิตวิญญาณชาวนาไทยในอำเภอเมือง จังหวัดสุพรรณบุรี ก่อตั้งโดยคุณนิทัศน์ เจริญธรรมรักษา เพื่อผลิตเมล็ดพันธุ์ข้าวคุณภาพและให้ความรู้เกี่ยวกับวิถีเกษตรกรไทย โดยมีแปลงนาสวยเป็นไฮไลท์</p>
+                    <a href="#" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-5">
+            <div class="card mx-auto" style="width: 25rem;">
+                <a href="#">
+                    <img src="assets/TP/TP03.jpg" class="card-img-top" alt="...">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">หมู่บ้านอนุรักษ์ควายไทย</h5>
+                    <p class="card-text">หมู่บ้านอนุรักษ์ควายไทยในอำเภอศรีประจันต์ จังหวัดสุพรรณบุรี ก่อตั้งเมื่อวันที่ 25 มีนาคม พ.ศ. 2545 เพื่ออนุรักษ์วิถีชีวิตชนบทและความสัมพันธ์ระหว่างชาวนาและควาย พร้อมส่งเสริมนโยบายของรัฐในการสร้างงานและรายได้ให้ชุมชน</p>
+                    <a href="#" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
