--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <h5 class="card-title">หมู่บ้านมังกรสวรรค์</h5>
                     <p class="card-text">พิพิธภัณฑ์ลูกหลานพันธุ์มังกรในจังหวัดสุพรรณบุรี ก่อตั้งโดยนายบรรหาร ศิลปอาชา ตั้งอยู่ในบริเวณศาลเจ้าพ่อหลักเมือง ฝั่งตะวันตกของแม่น้ำสุพรรณบุรี ก่อตั้งขึ้นใน พ.ศ. 2539 เพื่อเป็นอนุสรณ์ความสัมพันธ์ทางการทูตไทย-จีนครบ 20 ปี และนำเสนอเรื่องราวชาวจีนในประเทศไทย</p>
-                    <a href="#" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
+                    <a href="https://th.wikipedia.org/wiki/%E0%B8%9E%E0%B8%B4%E0%B8%9E%E0%B8%B4%E0%B8%98%E0%B8%A0%E0%B8%B1%E0%B8%93%E0%B8%91%E0%B9%8C%E0%B8%A5%E0%B8%B9%E0%B8%81%E0%B8%AB%E0%B8%A5%E0%B8%B2%E0%B8%99%E0%B8%9E%E0%B8%B1%E0%B8%99%E0%B8%98%E0%B8%B8%E0%B9%8C%E0%B8%A1%E0%B8%B1%E0%B8%87%E0%B8%81%E0%B8%A3" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
                 <div class="card-body">
                     <h5 class="card-title">ศูนย์เรียนรู้วิถีชีวิตและจิตวิญญาณชาวนาไทย</h5>
                     <p class="card-text">นาเฮียใช้ หรือศูนย์เรียนรู้วิถีชีวิตและจิตวิญญาณชาวนาไทยในอำเภอเมือง จังหวัดสุพรรณบุรี ก่อตั้งโดยคุณนิทัศน์ เจริญธรรมรักษา เพื่อผลิตเมล็ดพันธุ์ข้าวคุณภาพและให้ความรู้เกี่ยวกับวิถีเกษตรกรไทย โดยมีแปลงนาสวยเป็นไฮไลท์</p>
-                    <a href="#" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
+                    <a href="https://travel.kapook.com/view154272.html" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <h5 class="card-title">หมู่บ้านอนุรักษ์ควายไทย</h5>
                     <p class="card-text">หมู่บ้านอนุรักษ์ควายไทยในอำเภอศรีประจันต์ จังหวัดสุพรรณบุรี ก่อตั้งเมื่อวันที่ 25 มีนาคม พ.ศ. 2545 เพื่ออนุรักษ์วิถีชีวิตชนบทและความสัมพันธ์ระหว่างชาวนาและควาย พร้อมส่งเสริมนโยบายของรัฐในการสร้างงานและรายได้ให้ชุมชน</p>
-                    <a href="#" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
+                    <a href="https://ww1.suphanburi.go.th/travel/detail/4" class="btn btn-primary">ข้อมูลเพิ่มเติม</a>
                 </div>
             </div>
         </div>
