--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,6 @@
+<body>
 <div class="container mt-5">
-    <h1 class="text-center">สถานที่ท่องเที่ยวในจังหวัดสุพรรณบุรี</h1>
+    <h1 class="text-center" style="color:#14274E" >สถานที่ท่องเที่ยวในจังหวัดสุพรรณบุรี</h1>
     <div class="row mt-5 text-center">
         <div class="col-md-4 mb-5">
             <div class="card mx-auto" style="width: 25rem;">
