--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/home">สุพรรณบุรี</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,16 +17,15 @@
         </li>
         </ul>
         <div class="d-flex">
-            <a routerLink="/login">
-                <button class="btn btn-outline-success"
-                type="submit">เข้าสู่ระบบ</button>
-            </a>
-            &nbsp;&nbsp;
-            <a routerLink="/register">
-                <button class="btn btn-outline-warning"
-                type="submit">สมัครสมาชิก</button>
-            </a>
-        </div>
+          <a routerLink="/login">
+              <button class="btn btn-success" type="submit">เข้าสู่ระบบ</button>
+          </a>
+          &nbsp;&nbsp;
+          <a routerLink="/register">
+              <button class="btn btn-warning" type="submit">สมัครสมาชิก</button>
+          </a>
       </div>
-    </div>
-  </nav>
+      </div>
+      </div>
+      </nav>
+      
